# AI-Powered-Recommendation-Engine-codex

./: .env.example  .gitignore  Dockerfile.web  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250101_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: __init__.py  auth.py  health.py  users.py
app/auth/: __init__.py  dependencies.py  service.py  tokens.py
app/core/: __init__.py  cache.py  config.py  database.py  logging.py  security.py
app/models/: __init__.py  abtest.py  base.py  event.py  feature_store.py  interaction.py  item.py  user.py
app/schemas/: __init__.py  abtest.py  auth.py  common.py  event.py  feature_store.py  interaction.py  item.py  user.py
app/services/: __init__.py  feature_store.py  users.py
data/: catalog.csv
scripts/: load_catalog.py  seed.py
